add search clear button

--- a/apps/food/templates/food/index.html
+++ b/apps/food/templates/food/index.html
@@ -9,7 +9,8 @@
             <button class="btn btn-primary inline-button edit-controls" id="add-ingredient">+</button>
             <div class="input-prepend">
                 <span class="add-on"><i class="icon-search"></i></span>
-                <input type="text" class="input-medium" placeholder="Filter"/>
+                <input type="text" id="search" class="input-medium" placeholder="Filter"/>
+                <a href="#" class="icon-remove" id="clear-search"></a>
             </div>
         </div>
 
