--- a/apps/mainsite/static/css/screen.less
+++ b/apps/mainsite/static/css/screen.less
@@ -124,3 +124,10 @@ li.list-item
         padding: 10px;
     }
 }
+
+#clear-search
+{
+    position: relative;
+    left: -22px;
+    z-index: 200;
+}
