--- a/apps/mainsite/templates/base.html
+++ b/apps/mainsite/templates/base.html
@@ -16,6 +16,7 @@
                 <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.css" type="text/css">
                 <link rel="stylesheet" href="{{STATIC_URL}}css/screen.css" type="text/css">
             {% endif %}
+            <link rel="stylesheet" href="{{STATIC_URL}}css/chosen.css" type="text/css">
         {% endblock %}
     </head>
 
@@ -50,6 +51,7 @@
             <script src="{{STATIC_URL}}js/json2.js"></script>
             <script src="{{STATIC_URL}}js/underscore-min.js"></script>
             <script src="{{STATIC_URL}}js/backbone-min.js"></script>
+            <script src="{{STATIC_URL}}js/chosen.jquery.min.js"></script>
             <script src="{{STATIC_URL}}bootstrap/js/bootstrap-button.js"></script>
             <script src="{{STATIC_URL}}bootstrap/js/bootstrap-alert.js"></script>
             <script src="{{STATIC_URL}}bootstrap/js/bootstrap-modal.js"></script>
