--- a/apps/mainsite/static/css/screen.less
+++ b/apps/mainsite/static/css/screen.less
@@ -91,11 +91,17 @@ li.list-item
 {
     display: inline;
     float: right;
+    margin-left: 5px;
 }
 
 .edit-controls
 {
     display: none;
+}
+
+#search
+{
+    width: 170px;
 }
 
 #ingredient-list
@@ -127,6 +133,7 @@ li.list-item
 
 #clear-search
 {
+    width: 12px;
     position: relative;
     left: -22px;
     z-index: 200;
