--- a/apps/mainsite/static/css/screen.less
+++ b/apps/mainsite/static/css/screen.less
@@ -138,3 +138,31 @@ li.list-item
     left: -22px;
     z-index: 200;
 }
+
+#footer-return
+{
+    display: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    margin: 0;
+    padding: 8px;
+    text-align: center;
+
+    h1
+    {
+        color: #eee;
+    }
+}
+
+#footer-return:hover
+{
+    background-color: #eee;
+
+    h1
+    {
+        color: black;
+    }
+}
