--- a/apps/mainsite/static/css/screen.less
+++ b/apps/mainsite/static/css/screen.less
@@ -141,19 +141,21 @@ li.list-item
 
 #footer-return
 {
+    z-index: 300;
     display: none;
+    opacity: 0.75;
     cursor: pointer;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 20%;
     background-color: black;
     margin: 0;
-    padding: 8px;
+    padding: 2px;
     text-align: center;
 
     h1
     {
-        color: #eee;
+        color: white;
     }
 }
 
