--- a/apps/mainsite/static/css/screen.less
+++ b/apps/mainsite/static/css/screen.less
@@ -146,8 +146,9 @@ li.list-item
     opacity: 0.75;
     cursor: pointer;
     position: fixed;
+    right: 0;
     bottom: 0;
-    width: 20%;
+    width: 150px;
     background-color: black;
     margin: 0;
     padding: 2px;
